# wordle-ai

./: .gitignore  bench.py  extract_swedish_words.py  main.py  pyproject.toml  results-en-greedyHeuristic-easy.json  results-en-greedyHeuristic-hard.json  wordle.zig  words.json  words_sv.json
