[tool.poetry]
name = "wordle-ai"
description = "Strategies for Wordle"
authors = ["Dominik Fay <dominik.fay@gmx.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numba = "0.61.2"
numpy = "^2.2.5"
scipy = "^1.15.2"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
